--- a/permissions/plugin-embotics-vcommander.yml
+++ b/permissions/plugin-embotics-vcommander.yml
@@ -3,6 +3,7 @@ name: "embotics-vcommander"
 paths:
 - "io/jenkins/plugins/embotics-vcommander"
 developers:
-- "aelliotatemboticsdotcom"
-- "embotics"
-- "builderatemboticsdotcom"
+- "VolodymyrFesenko"
+- "dougkorchinski"
+- "bcsnow"
+- "toby-murray-snow-software"
